src/snapshots/hostlist_parser__tests__Beginning and ending prefixes don't match two single digit numbers.snap
---
source: src/lib.rs
expression: "parse(\"hostname[01-009]\")"
---
Err(
    Errors {
        position: 9,
        errors: [
            Unexpected(
                Static(
                    "larger end padding",
                ),
            ),
        ],
    },
)
