src/snapshots/hostlist_parser__tests__Duplicate without using a range.snap
---
source: src/lib.rs
assertion_line: 409
expression: "parse(\"hostname4.iml.com,hostname4.iml.com\")"

---
Ok(
    [
        "hostname4.iml.com",
    ],
)
