src/snapshots/hostlist_parser__tests__Empty expression.snap
---
source: src/lib.rs
assertion_line: 446
expression: "parse(\"\")"

---
Err(
    Errors {
        position: 0,
        errors: [
            Unexpected(
                Static(
                    "no host found",
                ),
            ),
            Unexpected(
                Static(
                    "end of input",
                ),
            ),
        ],
    },
)
