src/snapshots/hostlist_parser__tests__IPv4 single.snap
---
source: src/lib.rs
expression: "parse(\"192.168.0.1\")"
---
Ok(
    [
        "192.168.0.1",
    ],
)
