src/snapshots/hostlist_parser__tests__IPv4 with v6 range.snap
---
source: src/lib.rs
expression: "parse(\"192.168.0.[0-f]\").unwrap_err()"
---
Errors {
    position: 12,
    errors: [
        Unexpected(
            Token(
                '-',
            ),
        ),
        Expected(
            Token(
                ',',
            ),
        ),
        Expected(
            Token(
                ']',
            ),
        ),
    ],
}
