src/snapshots/hostlist_parser__tests__IPv6 compressed.snap
---
source: src/lib.rs
expression: "parse(\"2001:db8::1\")"
---
Ok(
    [
        "2001:db8::1",
    ],
)
