src/snapshots/hostlist_parser__tests__IPv6 expansion overflow.snap
---
source: src/lib.rs
expression: "parse(\"2001:db8::[0000-ffff]:[0000-ffff]\").unwrap_err()"
---
Errors {
    position: 0,
    errors: [
        Unexpected(
            Static(
                "cardinality overflow",
            ),
        ),
    ],
}
