src/snapshots/hostlist_parser__tests__IPv6 expansion with base 16.snap
---
source: src/lib.rs
expression: "parse(\"2001:db8::[00-10]\")"
---
Ok(
    [
        "2001:db8::00",
        "2001:db8::01",
        "2001:db8::02",
        "2001:db8::03",
        "2001:db8::04",
        "2001:db8::05",
        "2001:db8::06",
        "2001:db8::07",
        "2001:db8::08",
        "2001:db8::09",
        "2001:db8::0a",
        "2001:db8::0b",
        "2001:db8::0c",
        "2001:db8::0d",
        "2001:db8::0e",
        "2001:db8::0f",
        "2001:db8::10",
    ],
)
