src/snapshots/hostlist_parser__tests__IPv6 expansion with multiple ranges.snap
---
source: src/lib.rs
expression: "parse(\"2001:db[0-8]::[00-10]:1\")"
---
Ok(
    [
        "2001:db0::00:1",
        "2001:db0::01:1",
        "2001:db0::02:1",
        "2001:db0::03:1",
        "2001:db0::04:1",
        "2001:db0::05:1",
        "2001:db0::06:1",
        "2001:db0::07:1",
        "2001:db0::08:1",
        "2001:db0::09:1",
        "2001:db0::0a:1",
        "2001:db0::0b:1",
        "2001:db0::0c:1",
        "2001:db0::0d:1",
        "2001:db0::0e:1",
        "2001:db0::0f:1",
        "2001:db0::10:1",
        "2001:db1::00:1",
        "2001:db1::01:1",
        "2001:db1::02:1",
        "2001:db1::03:1",
        "2001:db1::04:1",
        "2001:db1::05:1",
        "2001:db1::06:1",
        "2001:db1::07:1",
        "2001:db1::08:1",
        "2001:db1::09:1",
        "2001:db1::0a:1",
        "2001:db1::0b:1",
        "2001:db1::0c:1",
        "2001:db1::0d:1",
        "2001:db1::0e:1",
        "2001:db1::0f:1",
        "2001:db1::10:1",
        "2001:db2::00:1",
        "2001:db2::01:1",
        "2001:db2::02:1",
        "2001:db2::03:1",
        "2001:db2::04:1",
        "2001:db2::05:1",
        "2001:db2::06:1",
        "2001:db2::07:1",
        "2001:db2::08:1",
        "2001:db2::09:1",
        "2001:db2::0a:1",
        "2001:db2::0b:1",
        "2001:db2::0c:1",
        "2001:db2::0d:1",
        "2001:db2::0e:1",
        "2001:db2::0f:1",
        "2001:db2::10:1",
        "2001:db3::00:1",
        "2001:db3::01:1",
        "2001:db3::02:1",
        "2001:db3::03:1",
        "2001:db3::04:1",
        "2001:db3::05:1",
        "2001:db3::06:1",
        "2001:db3::07:1",
        "2001:db3::08:1",
        "2001:db3::09:1",
        "2001:db3::0a:1",
        "2001:db3::0b:1",
        "2001:db3::0c:1",
        "2001:db3::0d:1",
        "2001:db3::0e:1",
        "2001:db3::0f:1",
        "2001:db3::10:1",
        "2001:db4::00:1",
        "2001:db4::01:1",
        "2001:db4::02:1",
        "2001:db4::03:1",
        "2001:db4::04:1",
        "2001:db4::05:1",
        "2001:db4::06:1",
        "2001:db4::07:1",
        "2001:db4::08:1",
        "2001:db4::09:1",
        "2001:db4::0a:1",
        "2001:db4::0b:1",
        "2001:db4::0c:1",
        "2001:db4::0d:1",
        "2001:db4::0e:1",
        "2001:db4::0f:1",
        "2001:db4::10:1",
        "2001:db5::00:1",
        "2001:db5::01:1",
        "2001:db5::02:1",
        "2001:db5::03:1",
        "2001:db5::04:1",
        "2001:db5::05:1",
        "2001:db5::06:1",
        "2001:db5::07:1",
        "2001:db5::08:1",
        "2001:db5::09:1",
        "2001:db5::0a:1",
        "2001:db5::0b:1",
        "2001:db5::0c:1",
        "2001:db5::0d:1",
        "2001:db5::0e:1",
        "2001:db5::0f:1",
        "2001:db5::10:1",
        "2001:db6::00:1",
        "2001:db6::01:1",
        "2001:db6::02:1",
        "2001:db6::03:1",
        "2001:db6::04:1",
        "2001:db6::05:1",
        "2001:db6::06:1",
        "2001:db6::07:1",
        "2001:db6::08:1",
        "2001:db6::09:1",
        "2001:db6::0a:1",
        "2001:db6::0b:1",
        "2001:db6::0c:1",
        "2001:db6::0d:1",
        "2001:db6::0e:1",
        "2001:db6::0f:1",
        "2001:db6::10:1",
        "2001:db7::00:1",
        "2001:db7::01:1",
        "2001:db7::02:1",
        "2001:db7::03:1",
        "2001:db7::04:1",
        "2001:db7::05:1",
        "2001:db7::06:1",
        "2001:db7::07:1",
        "2001:db7::08:1",
        "2001:db7::09:1",
        "2001:db7::0a:1",
        "2001:db7::0b:1",
        "2001:db7::0c:1",
        "2001:db7::0d:1",
        "2001:db7::0e:1",
        "2001:db7::0f:1",
        "2001:db7::10:1",
        "2001:db8::00:1",
        "2001:db8::01:1",
        "2001:db8::02:1",
        "2001:db8::03:1",
        "2001:db8::04:1",
        "2001:db8::05:1",
        "2001:db8::06:1",
        "2001:db8::07:1",
        "2001:db8::08:1",
        "2001:db8::09:1",
        "2001:db8::0a:1",
        "2001:db8::0b:1",
        "2001:db8::0c:1",
        "2001:db8::0d:1",
        "2001:db8::0e:1",
        "2001:db8::0f:1",
        "2001:db8::10:1",
    ],
)
