src/snapshots/hostlist_parser__tests__IPv6 expansion.snap
---
source: src/lib.rs
expression: "parse(\"2001:db8::[0-f]\")"
---
Ok(
    [
        "2001:db8::0",
        "2001:db8::1",
        "2001:db8::2",
        "2001:db8::3",
        "2001:db8::4",
        "2001:db8::5",
        "2001:db8::6",
        "2001:db8::7",
        "2001:db8::8",
        "2001:db8::9",
        "2001:db8::a",
        "2001:db8::b",
        "2001:db8::c",
        "2001:db8::d",
        "2001:db8::e",
        "2001:db8::f",
    ],
)
