src/snapshots/hostlist_parser__tests__IPv6 full.snap
---
source: src/lib.rs
expression: "parse(\"fe80:1234:5678:9abc:def0:1234:5678:9abc\")"
---
Ok(
    [
        "fe80:1234:5678:9abc:def0:1234:5678:9abc",
    ],
)
